# blastguard

./: .gitignore  BUILD_PROMPT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SPEC.md
.claude/: settings.json
.claude/agents/: bench-regression-guard.md  parser-query-reviewer.md  resolver-invariant-reviewer.md
.claude/hooks/: check-rust-fmt.sh  check-rust-stdio.sh  check-scm-breakage.sh
.claude/skills/bench-quick/: SKILL.md
.claude/skills/bench-rerun/: SKILL.md
.claude/skills/codebase-deep-audit/: SKILL.md
.claude/skills/dead-code-sweep/: SKILL.md
.claude/skills/probe-live/: SKILL.md  probe.py
.claude/skills/resolver-invariants/: SKILL.md
.claude/skills/rust-complexity-audit/: SKILL.md
.claude/skills/rust-quality-sweep/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: .env.example  KNOWN_GAPS.md  README.md  agent_loop.py  batch_runner.py  budget.py  compare.py  evaluator.py  grader.py  mcp_client.py  microbench.py  microbench_grader.py  microbench_judge.py  prepare_instances.py  prompts.py  pyproject.toml  runner.py  stats.py  stats_aggregate.py  sweagent_runner.py  tasks.py  tasks_registry.py  telemetry.py  token_count.py  validate_verdict.py  watchdog.sh
bench/bundles/blastguard/: bridge.py  config.yaml
bench/results/: microbench-gemma-smoke.jsonl  microbench-round2.jsonl  microbench-round3.jsonl  microbench-round4.jsonl  microbench-round5.jsonl  microbench-round6.jsonl
bench/runs/: 20260420-014947-chain-search-to-graph.jsonl  20260420-160318-chain-judge-smoke.jsonl  20260420-160318-chain-judge-smoke.judge.jsonl
bench/scripts/: clone_evaluator.sh  clone_sweagent.sh  sweagent_with_pricing.py  verify_sweagent.sh
bench/tests/: test_bridge.py  test_budget.py  test_compare.py  test_evaluator.py  test_grader.py  test_prompts.py  test_stats.py  test_stats_aggregate.py  test_sweagent_runner.py  test_tasks.py  test_tasks_registry.py  test_telemetry.py  test_validate_verdict.py
docs/: BENCHMARKING.md  MICROBENCH.md
docs/audits/: 2026-04-20-deep-audit.md
docs/superpowers/plans/: 2026-04-18-blastguard-phase-1-apply-change.md  2026-04-18-blastguard-phase-1-benchmark-harness.md  2026-04-18-blastguard-phase-1-file-watcher.md  2026-04-18-blastguard-phase-1-indexing-pipeline.md  2026-04-18-blastguard-phase-1-mcp-wiring.md  2026-04-18-blastguard-phase-1-run-tests.md  2026-04-18-blastguard-phase-1-search-tool.md  2026-04-19-benchmark-harness-rewrite.md  2026-04-19-blastguard-tuning-via-microbench.md  2026-04-19-gemma-free-microbench-statistical-power.md  2026-04-19-oss-release-v0.1.0.md  2026-04-19-sweagent-scaffold-integration.md  2026-04-19-tier-1-search-response-optimizations.md  2026-04-20-chain-from-to-file-path.md  2026-04-24-callers-with-context.md
integrations/claude-code/: README.md  settings.sample.json
queries/: javascript.scm  python.scm  rust.scm  tsx.scm  typescript.scm
src/: config.rs  error.rs  lib.rs  main.rs  semantic.rs  session.rs
src/edit/: apply.rs  context.rs  diff.rs  mod.rs  request.rs
src/graph/: impact.rs  mod.rs  ops.rs  types.rs
src/index/: cache.rs  indexer.rs  mod.rs  watcher.rs
src/mcp/: adapters.rs  apply_change.rs  mod.rs  run_tests.rs  search.rs  server.rs  status.rs
src/parse/: body_hash.rs  javascript.rs  mod.rs  python.rs  resolve.rs  rust.rs  symbols.rs  typescript.rs
src/runner/: attribute.rs  detect.rs  execute.rs  mod.rs  parse.rs  request.rs
src/search/: context_extract.rs  dispatcher.rs  hit.rs  mod.rs  query.rs  structural.rs  text.rs
tests/: integration_apply_change.rs  integration_indexer.rs  integration_mcp_server.rs  integration_run_tests.rs  integration_search.rs  integration_watcher.rs
(+17 files in other folders)
