[package]
name = "blastguard"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Rust MCP server that lifts AI coding agents via AST graph retrieval, cascade warnings, and test-failure attribution."
license = "MIT"
repository = "https://github.com/adamhamo22/blastguard"
readme = "README.md"
keywords = ["mcp", "llm", "ast", "tree-sitter", "code-graph"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "blastguard"
path = "src/main.rs"

[lib]
name = "blastguard"
path = "src/lib.rs"

[dependencies]
# MCP — rmcp 1.x. Verified on crates.io/docs.rs via context7 on 2026-04-18.
rmcp = { version = "1.5", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "0.9"

# Runtime
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parsing
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.21"               # 0.22+ uses ABI 15; tree-sitter core 0.24 max ABI is 14

# File watching
notify = "8"
notify-debouncer-mini = "0.7"

# Filesystem + parallelism
ignore = "0.4"
regex = "1"
rayon = "1.10"

# Serialization / hashing
rmp-serde = "1"
blake3 = "1"
strsim = "0.11"
seahash = "4"
uuid = { version = "1", features = ["v4"] }

# Errors + logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
toml = "0.8"

# Phase 2 — feature-flagged
sqlite-vec = { version = "0.1", optional = true }
rusqlite = { version = "0.32", optional = true }
fastembed = { version = "5", optional = true }
streaming-iterator = "0.1.9"

[features]
default = []
semantic = ["dep:sqlite-vec", "dep:rusqlite", "dep:fastembed"]

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
