[project]
name = "blastguard-bench"
version = "0.1.0"
description = "SWE-bench Pro benchmark harness for BlastGuard"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "mcp>=1.10",
    "datasets>=3.0",
    "pydantic>=2.8",
    "click>=8.1",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
