[project]
name = "blastguard-bench"
version = "0.1.0"
description = "SWE-bench Pro benchmark harness for BlastGuard"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "mcp>=1.10",
    "datasets>=3.0",
    "pydantic>=2.8",
    "click>=8.1",
    "rich>=13.7",
    "scipy>=1.14",
    # SWE-agent v1.1.0 from git (PyPI stub 0.0.1 is unusable).
    # After uv sync, run bench/scripts/clone_sweagent.sh to fetch the required
    # config/ + tools/ + trajectories/ dirs into bench/.sweagent-repo, then set:
    #   SWE_AGENT_CONFIG_DIR=bench/.sweagent-repo/config
    #   SWE_AGENT_TOOLS_DIR=bench/.sweagent-repo/tools
    #   SWE_AGENT_TRAJECTORY_DIR=bench/.sweagent-repo/trajectories
    "sweagent",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.uv.sources]
sweagent = { git = "https://github.com/SWE-agent/SWE-agent.git", rev = "v1.1.0" }

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
